# coppermind

./: .gitignore  CHANGELOG.md  CrystalRadio.kicad_sch  LEDBoard.kicad_pcb  LEDSchematic.kicad_sch  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARQUITETURA.md  AUTORROTEAMENTO.md
examples/: led_board.py
scripts/: record_kicad_fixture.py
src/coppermind/: __init__.py  persistence.py  safety.py  server.py  session.py  variants.py
src/coppermind/backends/: __init__.py  base.py  batch_backend.py  drc.py  factory.py  ipc_backend.py  ipc_mapping.py  memory_backend.py  units.py
tests/: conftest.py  test_autorouter.py  test_autorouting_tools.py  test_critique.py  test_datasheet_local_tools.py  test_datasheets.py  test_design_blocks.py  test_domain.py  test_drc_parser.py  test_freerouting_timeout.py  test_freerouting_workflow.py  test_intelligence_tools.py  test_ipc_integration.py  test_ipc_live.py  test_kb_yaml.py  test_kicad11_ready.py  test_knowledge.py  test_local_library.py  test_native_drc_loop.py  test_netlist_board.py  test_pad_tools.py  test_pad_verification.py  test_pads.py  test_persistence.py  test_persistence_tools.py  test_phase4_tools.py  test_phase5_tools.py  test_placement.py  test_plan_inplace.py  test_registry_discovery.py  test_safety.py  test_schematic_netlist.py  test_schematic_serialize.py  test_serialize_kicad_pcb.py  test_ses_parser.py  test_stable_ids.py  test_suppliers.py  test_timeline.py  test_tool_budget.py  test_tools_e2e.py  (+6 more)
tests/fixtures/: README.md  two_resistors.json
(+42 files in other folders)
