[project]
name = "coppermind"
version = "0.1.0"
description = "AI PCB design copilot — MCP server for KiCAD (IPC-first, transactional, verified)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Coppermind contributors" }]
dependencies = [
    "pydantic>=2.5.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
ipc = ["kicad-python>=0.7.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
]

[project.scripts]
coppermind = "coppermind.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coppermind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
